# Telegram-Bot

./: .gitattributes  .gitignore  HOK25_bot.py  README.md  pyproject.toml  requirements.txt  user_data.db
Telegram-Bot.git/: fast_import_crash_31568  packed-refs
Telegram-Bot.git/objects/pack/: pack-7c93a0d889c6813e3b8a5e07498156c1a3bad569.idx  pack-7c93a0d889c6813e3b8a5e07498156c1a3bad569.pack  pack-7c93a0d889c6813e3b8a5e07498156c1a3bad569.rev
